fix for horizontal overflow in templates (row margin)

--- a/static/src/css/employee_performance_styles.css
+++ b/static/src/css/employee_performance_styles.css
@@ -33,3 +33,8 @@
     padding-right: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+.employee_performance .row{
+    /* margin-left: auto; */
+    margin-right: auto;
+}
